--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "randomatic": "^3.1.1"
-  }
+  },
+  "engines":{"node":"12.16.2"}
 }
